Add similar coords and limit
